fix spacing on lp

--- a/src/pages/HomePage2/Hero.module.scss
+++ b/src/pages/HomePage2/Hero.module.scss
@@ -82,6 +82,10 @@
     // background-color: red;
     width: 100%;
     height: 100%;
+    // background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
     // background-color: red;
     display: flex;
